<resources>
    <string name="app_name">UserProfile</string>
    <string name="name">Name</string>
    <string name="position">Position</string>
    <string name="company">Company</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="add_line1">Address Line 1</string>
    <string name="add_line2">Address Line 2</string>
    <string name="add_line3">Address Line 3</string>
    <string name="add">Add</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>
